[gd_scene load_steps=18 format=2]

[ext_resource path="res://image/menu/play_menu/back_play.png" type="Texture" id=1]
[ext_resource path="res://fonts/Play-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://image/menu/play_menu/under_button.png" type="Texture" id=3]
[ext_resource path="res://image/menu/option_menu/x.png" type="Texture" id=4]
[ext_resource path="res://scripts/menu/play_menu/playmenu.gd" type="Script" id=5]
[ext_resource path="res://nodes/system/player.tscn" type="PackedScene" id=6]
[ext_resource path="res://nodes/system/event_planner.tscn" type="PackedScene" id=7]
[ext_resource path="res://nodes/menu/play_menu/shop_menu.tscn" type="PackedScene" id=8]
[ext_resource path="res://image/menu/option_menu/endcard.png" type="Texture" id=9]
[ext_resource path="res://nodes/system/szene_changer.tscn" type="PackedScene" id=10]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 45
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 38
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 86
font_data = ExtResource( 2 )

[node name="playmenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back_play" type="Sprite" parent="."]
position = Vector2( 962.474, 539.799 )
scale = Vector2( 1.0027, 1.00385 )
texture = ExtResource( 1 )

[node name="text" type="Node2D" parent="."]

[node name="day" type="Label" parent="text"]
margin_left = 620.0
margin_top = 2.0
margin_right = 1104.0
margin_bottom = 130.0
rect_pivot_offset = Vector2( -672.523, 216.011 )
custom_fonts/font = SubResource( 1 )
text = "Day: 1"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="daytime" type="Label" parent="text"]
margin_left = 1154.0
margin_top = 1.0
margin_right = 1889.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 1 )
text = "Daytime: Bloodbath"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu" type="RichTextLabel" parent="text"]
margin_left = 235.0
margin_top = 36.0
margin_right = 364.0
margin_bottom = 93.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "Menu"
text = "Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="RichTextLabel" parent="text"]
margin_left = 779.0
margin_top = 964.0
margin_right = 901.0
margin_bottom = 1021.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "Back"
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shop" type="RichTextLabel" parent="text"]
margin_left = 1207.35
margin_top = 960.975
margin_right = 1339.35
margin_bottom = 1024.98
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "Shop"
text = "Shop"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="next" type="RichTextLabel" parent="text"]
margin_left = 1635.04
margin_top = 963.0
margin_right = 1750.04
margin_bottom = 1020.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "Next"
text = "Next"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="main_text" type="RichTextLabel" parent="text"]
margin_left = 624.0
margin_top = 172.0
margin_right = 1871.0
margin_bottom = 865.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="status" type="Label" parent="text"]
margin_left = 22.0
margin_top = 121.0
margin_right = 590.0
margin_bottom = 226.0
rect_pivot_offset = Vector2( -672.523, 216.011 )
custom_fonts/font = SubResource( 4 )
text = "Current status of all fighters:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttons" type="Node2D" parent="."]

[node name="menu" type="TextureButton" parent="buttons"]
margin_left = 134.375
margin_top = 6.31744
margin_right = 523.375
margin_bottom = 156.317
rect_scale = Vector2( 0.846993, 0.771278 )
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="TextureButton" parent="buttons"]
margin_left = 632.669
margin_top = 917.0
margin_right = 1021.67
margin_bottom = 1067.0
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shop" type="TextureButton" parent="buttons"]
margin_left = 1064.41
margin_top = 917.0
margin_right = 1453.41
margin_bottom = 1067.0
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="next" type="TextureButton" parent="buttons"]
margin_left = 1487.51
margin_top = 917.0
margin_right = 1876.51
margin_bottom = 1067.0
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon_scroll" type="ScrollContainer" parent="."]
margin_left = 27.0
margin_top = 224.0
margin_right = 585.0
margin_bottom = 1067.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vbox" type="VBoxContainer" parent="icon_scroll"]

[node name="player" parent="." instance=ExtResource( 6 )]

[node name="event_planner" parent="." instance=ExtResource( 7 )]

[node name="shop_menu" parent="." instance=ExtResource( 8 )]
visible = false

[node name="endcard" type="Control" parent="."]
visible = false
margin_right = 1930.0
margin_bottom = 1103.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="endcard" type="Sprite" parent="endcard"]
position = Vector2( 955.107, 539.733 )
scale = Vector2( 1.02497, 1.05272 )
texture = ExtResource( 9 )

[node name="again_text" type="Label" parent="endcard/endcard"]
margin_left = -197.0
margin_top = 192.527
margin_right = 185.0
margin_bottom = 337.527
custom_fonts/font = SubResource( 5 )
text = "Simulate
again"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="RichTextLabel" parent="endcard/endcard"]
margin_left = -550.922
margin_top = 192.544
margin_right = -251.922
margin_bottom = 339.544
custom_fonts/normal_font = SubResource( 6 )
text = "  Back to 
the game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="daytime" type="Label" parent="endcard/endcard"]
margin_left = -610.43
margin_top = -198.74
margin_right = 614.57
margin_bottom = 107.26
custom_fonts/font = SubResource( 7 )
text = "The games are over what do 
you want to do?
"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back_menu" type="Label" parent="endcard/endcard"]
margin_left = 204.785
margin_top = 191.461
margin_right = 594.785
margin_bottom = 336.461
custom_fonts/font = SubResource( 5 )
text = "Chose new
players"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="go_back" type="TextureButton" parent="endcard/endcard"]
margin_left = -610.884
margin_top = 193.743
margin_right = -221.883
margin_bottom = 343.743
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="again" type="TextureButton" parent="endcard/endcard"]
margin_left = -202.173
margin_top = 193.743
margin_right = 186.828
margin_bottom = 343.743
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit" type="TextureButton" parent="endcard/endcard"]
margin_left = 207.616
margin_top = 193.743
margin_right = 596.617
margin_bottom = 343.743
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="endcard/endcard"]
margin_left = 562.188
margin_top = -386.024
margin_right = 665.188
margin_bottom = -293.024
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
texture_focused = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu" type="Control" parent="."]
visible = false
margin_right = 1930.0
margin_bottom = 1103.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="endcard" type="Sprite" parent="menu"]
position = Vector2( 955.107, 539.733 )
scale = Vector2( 1.02497, 1.05272 )
texture = ExtResource( 9 )

[node name="again_text" type="Label" parent="menu/endcard"]
margin_left = -177.254
margin_top = 197.217
margin_right = 167.746
margin_bottom = 342.217
custom_fonts/font = SubResource( 5 )
text = "Save / Load
 game"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="RichTextLabel" parent="menu/endcard"]
margin_left = -550.922
margin_top = 192.544
margin_right = -251.922
margin_bottom = 339.544
custom_fonts/normal_font = SubResource( 6 )
text = "  Back to 
the game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="daytime" type="Label" parent="menu/endcard"]
margin_left = -618.174
margin_top = -192.708
margin_right = 606.826
margin_bottom = 113.292
custom_fonts/font = SubResource( 7 )
text = "What do you want to do?
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back_menu" type="Label" parent="menu/endcard"]
margin_left = 204.785
margin_top = 191.461
margin_right = 594.785
margin_bottom = 336.461
custom_fonts/font = SubResource( 5 )
text = "Quit game"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back_game" type="TextureButton" parent="menu/endcard"]
margin_left = -610.884
margin_top = 193.743
margin_right = -221.883
margin_bottom = 343.743
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="save" type="TextureButton" parent="menu/endcard"]
margin_left = -202.173
margin_top = 193.743
margin_right = 186.828
margin_bottom = 343.743
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="TextureButton" parent="menu/endcard"]
margin_left = 207.616
margin_top = 193.743
margin_right = 596.617
margin_bottom = 343.743
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu_exit" type="TextureButton" parent="menu/endcard"]
margin_left = 562.188
margin_top = -386.024
margin_right = 665.188
margin_bottom = -293.024
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
texture_focused = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="szene_changer" parent="." instance=ExtResource( 10 )]
visible = false

[connection signal="mouse_entered" from="buttons/menu" to="." method="_on_menu_mouse_entered"]
[connection signal="mouse_exited" from="buttons/menu" to="." method="_on_menu_mouse_exited"]
[connection signal="pressed" from="buttons/menu" to="." method="_on_menu_pressed"]
[connection signal="mouse_entered" from="buttons/back" to="." method="_on_back_mouse_entered"]
[connection signal="mouse_exited" from="buttons/back" to="." method="_on_back_mouse_exited"]
[connection signal="pressed" from="buttons/back" to="." method="_on_back_pressed"]
[connection signal="mouse_entered" from="buttons/shop" to="." method="_on_shop_mouse_entered"]
[connection signal="mouse_exited" from="buttons/shop" to="." method="_on_shop_mouse_exited"]
[connection signal="pressed" from="buttons/shop" to="." method="_on_shop_pressed"]
[connection signal="mouse_entered" from="buttons/next" to="." method="_on_next_mouse_entered"]
[connection signal="mouse_exited" from="buttons/next" to="." method="_on_next_mouse_exited"]
[connection signal="pressed" from="buttons/next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="endcard/endcard/go_back" to="." method="_on_go_back_pressed"]
[connection signal="pressed" from="endcard/endcard/again" to="." method="_on_again_pressed"]
[connection signal="pressed" from="endcard/endcard/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="endcard/endcard/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="menu/endcard/back_game" to="." method="_on_back_game_pressed"]
[connection signal="pressed" from="menu/endcard/save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="menu/endcard/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="menu/endcard/menu_exit" to="." method="_on_back_game_pressed"]
